--- a/webview/index.html
+++ b/webview/index.html
@@ -11,7 +11,7 @@
     }
 
     #snippet-container {
-      background-color: #f2f2f2;
+      /* background-color: #f2f2f2; */
       padding: 22px;
       border-radius: 4px;
       opacity: 0;
